--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=spring-boot-demo
 server.port=8081
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:file:~/data/employee_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl.auto=update
+spring.h2.console.enabled= true
+spring.datasource.url= jdbc:h2:file:~/data/employee_db
+spring.datasource.driver-class-name= org.h2.Driver
+spring.datasource.username= sa
+spring.datasource.password= password
+spring.jpa.database-platform= org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql= true
