--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
 spring.application.name=spring-boot-demo
 server.port=8081
 
-spring.h2.console.enabled= true
-spring.datasource.url= jdbc:h2:file:~/data/employee_db
-spring.datasource.driver-class-name= org.h2.Driver
-spring.datasource.username= sa
-spring.datasource.password= password
-spring.jpa.database-platform= org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.show-sql= true
+
+#----H2 configurations----
+#spring.h2.console.enabled= true
+#spring.datasource.url= jdbc:h2:file:~/data/employee_db
+#spring.datasource.driver-class-name= org.h2.Driver
+#spring.datasource.username= sa
+#spring.datasource.password= password
+#spring.jpa.database-platform= org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.show-sql= true
+
+
+#----Postgres Configurations----
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/sbproject
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
